--- a/PowerApp/Src/ListaOKRs.fx.yaml
+++ b/PowerApp/Src/ListaOKRs.fx.yaml
@@ -138,7 +138,7 @@
         BorderColor: =App.Theme.Colors.Darker40
         DelayItemLoading: =true
         Fill: =RGBA(255, 255, 255, 1)
-        Height: =576
+        Height: =558
         Items: |-
             =Filter(
                 T_OKR_APP_GCI_003,
@@ -167,7 +167,7 @@
         Visible: =vistaDetalle
         Width: =1270
         X: =53
-        Y: =172
+        Y: =197
         ZIndex: =7
 
         HtmlText1 As htmlViewer:
@@ -994,7 +994,7 @@
         TriggerOutput: ='ComboboxCanvas.TriggerOutput'.Delayed
         Width: =200
         X: =408
-        Y: =127
+        Y: =159
         ZIndex: =8
 
         Value2 As PowerApps_CoreControls_ComboboxCanvasTemplate_dataField.textualColumn:
@@ -1015,7 +1015,7 @@
         Type: ='TextInputCanvas.Type'.Text
         Width: =180
         X: =59
-        Y: =127
+        Y: =159
         ZIndex: =9
 
     "filterEstado As 'Cuadro combinado'.pcfdataset":
@@ -1030,7 +1030,7 @@
         TriggerOutput: ='ComboboxCanvas.TriggerOutput'.Delayed
         Width: =140
         X: =253
-        Y: =127
+        Y: =159
         ZIndex: =10
 
         Value2_2 As PowerApps_CoreControls_ComboboxCanvasTemplate_dataField.textualColumn:
@@ -1056,8 +1056,8 @@
         OnSelect: =Navigate(Registrar_Kr)
         Text: ="Agregar KR"
         Width: =125
-        X: =1070
-        Y: =130
+        X: =934
+        Y: =114
         ZIndex: =11
 
     btnActualizarVista As Botón:
@@ -1070,15 +1070,15 @@
         Height: =32
         Icon: ="ArrowSync"
         IconStyle: ='ButtonCanvas.IconStyle'.Filled
-        Layout: ='ButtonCanvas.Layout'.IconOnly
+        Layout: ='ButtonCanvas.Layout'.IconBefore
         OnSelect: |-
             =Refresh(T_OKR_APP_GCI_003);
             Refresh(T_REG_STS_KR_APP_GCI_003);
             Refresh(T_TAREAS_APP_GCI_003)
         Text: ="Sincronizar"
-        Width: =40
-        X: =1202
-        Y: =130
+        Width: =121
+        X: =1064
+        Y: =114
         ZIndex: =12
 
     "filterTrimestre As 'Cuadro combinado'.pcfdataset":
@@ -1092,7 +1092,7 @@
         TriggerOutput: ='ComboboxCanvas.TriggerOutput'.Delayed
         Width: =110
         X: =835
-        Y: =127
+        Y: =159
         ZIndex: =13
 
         Value2_1 As PowerApps_CoreControls_ComboboxCanvasTemplate_dataField.textualColumn:
@@ -1115,7 +1115,7 @@
         TriggerOutput: ='ComboboxCanvas.TriggerOutput'.Delayed
         Width: =90
         X: =958
-        Y: =127
+        Y: =159
         ZIndex: =14
 
         Value2_3 As PowerApps_CoreControls_ComboboxCanvasTemplate_dataField.textualColumn:
@@ -1142,7 +1142,7 @@
         TriggerOutput: ='ComboboxCanvas.TriggerOutput'.Delayed
         Width: =200
         X: =621
-        Y: =127
+        Y: =159
         ZIndex: =15
 
         Value2_8 As PowerApps_CoreControls_ComboboxCanvasTemplate_dataField.textualColumn:
@@ -1164,7 +1164,7 @@
         ToggleSize: =45
         Width: =73
         X: =1245
-        Y: =115
+        Y: =99
         ZIndex: =16
 
     Popup As groupContainer.manualLayoutContainer:
@@ -3747,13 +3747,4 @@
                     Wrap: =false
                     Y: =DataCardKey37.Y
                     ZIndex: =4
-
-    Rectangle3 As rectangle:
-        BorderColor: =App.Theme.Colors.Darker40
-        Fill: =RGBA(122, 138, 143, 1)
-        Height: =47
-        Width: =2
-        X: =1058
-        Y: =122
-        ZIndex: =21
 
