--- a/PowerApp/Other/Src/App.pa.yaml
+++ b/PowerApp/Other/Src/App.pa.yaml
@@ -19,4 +19,4 @@ App:
       Set(lastID, form_Registrar.LastSubmit.nombreKR);
       Set(usuarioActual,User().Email);
       Set(vistaDetalle,true)
-    Theme: =Pacifico
+    Theme: =pacifico1
