--- a/PowerApp/Other/Src/ListaOKRs.pa.yaml
+++ b/PowerApp/Other/Src/ListaOKRs.pa.yaml
@@ -945,6 +945,7 @@ Screens:
             Layout: ='ButtonCanvas.Layout'.IconBefore
             OnSelect: =Navigate(Registrar_Kr)
             Text: ="Agregar KR"
+            VerticalAlign: =VerticalAlign.Middle
             Width: =125
             X: =934
             Y: =114
