--- a/PowerApp/Other/Src/Components/CustomToggle.pa.yaml
+++ b/PowerApp/Other/Src/Components/CustomToggle.pa.yaml
@@ -15,6 +15,11 @@ ComponentDefinitions:
         PropertyKind: Input
         DisplayName: SelectedColorIcon_Text
         Description: Propiedad personalizada
+      activeToggleID:
+        DataType: Number
+        PropertyKind: Output
+        DisplayName: activeToggleID
+        Description: Propiedad personalizada
       baseBG:
         DataType: Color
         PropertyKind: Input
@@ -61,35 +66,45 @@ ComponentDefinitions:
                   LayoutDirection: =LayoutDirection.Horizontal
                   LayoutMinHeight: =0
                   LayoutMinWidth: =0
-                  PaddingBottom: =5
-                  PaddingLeft: =5
-                  PaddingRight: =5
-                  PaddingTop: =5
-                  RadiusBottomLeft: =10
-                  RadiusBottomRight: =10
-                  RadiusTopLeft: =10
-                  RadiusTopRight: =10
+                  PaddingBottom: =2
+                  PaddingLeft: =2
+                  PaddingRight: =2
+                  PaddingTop: =2
                 Children:
-                  - Icon2:
-                      Control: Icon@0.0.7
+                  - Icon7:
+                      Control: Classic/Icon@2.5.0
                       Properties:
                         AlignInContainer: =AlignInContainer.Stretch
+                        BorderColor: =If(activeToggleID = 2, CustomToggle.selectedBG,CustomToggle.baseBG)
+                        BorderStyle: =BorderStyle.None
+                        Color: =If(activeToggleID = 2, CustomToggle.SelectedColorIcon_Text,CustomToggle.basedColorIcon_Text)
+                        Fill: =If(activeToggleID = 2, CustomToggle.selectedBG,CustomToggle.baseBG)
                         FillPortions: =1
-                        Icon: ="AppsListDetail"
-                        IconColor: =If(activeToggleID = 1, CustomToggle.SelectedColorIcon_Text,CustomToggle.basedColorIcon_Text)
-                        IconStyle: ='Icon.IconStyle'.Outline
-                        LayoutMinHeight: =20
-                        LayoutMinWidth: =20
-                  - Icon4:
-                      Control: Icon@0.0.7
+                        Height: =0
+                        HoverColor: =If(activeToggleID = 2, CustomToggle.selectedBG,CustomToggle.baseBG)
+                        Icon: =Icon.Waffle
+                        LayoutMinHeight: =Parent.LayoutMinHeight
+                        LayoutMinWidth: =0
+                        PaddingBottom: =5
+                        PaddingLeft: =5
+                        PaddingRight: =5
+                        PaddingTop: =5
+                  - Icon8:
+                      Control: Classic/Icon@2.5.0
                       Properties:
                         AlignInContainer: =AlignInContainer.Stretch
+                        BorderColor: =If(activeToggleID = 1, CustomToggle.baseBG,CustomToggle.selectedBG)
+                        BorderStyle: =BorderStyle.None
+                        Color: =If(activeToggleID = 1, CustomToggle.SelectedColorIcon_Text,CustomToggle.basedColorIcon_Text)
+                        Fill: =If(activeToggleID = 1, CustomToggle.selectedBG,CustomToggle.baseBG)
                         FillPortions: =1
-                        Icon: ="AppsList"
-                        IconColor: =If(activeToggleID = 2, CustomToggle.SelectedColorIcon_Text,CustomToggle.basedColorIcon_Text)
-                        LayoutMinHeight: =20
-                        LayoutMinWidth: =20
-                        Width: =20
+                        Icon: =Icon.OptionsList
+                        LayoutMinHeight: =Parent.LayoutMinHeight
+                        LayoutMinWidth: =0
+                        PaddingBottom: =5
+                        PaddingLeft: =5
+                        PaddingRight: =5
+                        PaddingTop: =5
       - Button2:
           Control: Classic/Button@2.2.0
           Properties:
