--- a/PowerApp/Src/Components/CustomToggle.fx.yaml
+++ b/PowerApp/Src/Components/CustomToggle.fx.yaml
@@ -1,4 +1,5 @@
 CustomToggle As CanvasComponent:
+    activeToggleID: =activeToggleID
     baseBG: =RGBA(255, 255, 255, 1)
     basedColorIcon_Text: =RGBA(0, 153, 204, 1)
     Fill: =RGBA(0, 0, 0, 0)
@@ -31,43 +32,52 @@ CustomToggle As CanvasComponent:
             LayoutMinHeight: =0
             LayoutMinWidth: =0
             LayoutMode: =LayoutMode.Auto
-            PaddingBottom: =5
-            PaddingLeft: =5
-            PaddingRight: =5
-            PaddingTop: =5
-            RadiusBottomLeft: =10
-            RadiusBottomRight: =10
-            RadiusTopLeft: =10
-            RadiusTopRight: =10
+            PaddingBottom: =2
+            PaddingLeft: =2
+            PaddingRight: =2
+            PaddingTop: =2
+            RadiusBottomLeft: =4
+            RadiusBottomRight: =4
+            RadiusTopLeft: =4
+            RadiusTopRight: =4
             ZIndex: =2
 
-            Icon2 As Icono:
+            Icon7 As icon.Waffle:
                 AlignInContainer: =AlignInContainer.Stretch
-                DisplayMode: =DisplayMode.Edit
+                BorderColor: =If(activeToggleID = 2, CustomToggle.selectedBG,CustomToggle.baseBG)
+                BorderStyle: =BorderStyle.None
+                Color: =If(activeToggleID = 2, CustomToggle.SelectedColorIcon_Text,CustomToggle.basedColorIcon_Text)
+                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                DisabledColor: =RGBA(244, 244, 244, 1)
+                Fill: =If(activeToggleID = 2, CustomToggle.selectedBG,CustomToggle.baseBG)
                 FillPortions: =1
-                Height: =32
-                Icon: ="AppsListDetail"
-                IconColor: =If(activeToggleID = 1, CustomToggle.SelectedColorIcon_Text,CustomToggle.basedColorIcon_Text)
-                IconStyle: ='Icon.IconStyle'.Outline
-                LayoutMinHeight: =20
-                LayoutMinWidth: =20
-                Width: =32
-                X: =0
-                Y: =0
+                Height: =0
+                HoverColor: =If(activeToggleID = 2, CustomToggle.selectedBG,CustomToggle.baseBG)
+                Icon: =Icon.Waffle
+                LayoutMinHeight: =Parent.LayoutMinHeight
+                LayoutMinWidth: =0
+                PaddingBottom: =5
+                PaddingLeft: =5
+                PaddingRight: =5
+                PaddingTop: =5
                 ZIndex: =1
 
-            Icon4 As Icono:
+            Icon8 As icon.OptionsList:
                 AlignInContainer: =AlignInContainer.Stretch
-                DisplayMode: =DisplayMode.Edit
+                BorderColor: =If(activeToggleID = 1, CustomToggle.baseBG,CustomToggle.selectedBG)
+                BorderStyle: =BorderStyle.None
+                Color: =If(activeToggleID = 1, CustomToggle.SelectedColorIcon_Text,CustomToggle.basedColorIcon_Text)
+                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                DisabledColor: =RGBA(244, 244, 244, 1)
+                Fill: =If(activeToggleID = 1, CustomToggle.selectedBG,CustomToggle.baseBG)
                 FillPortions: =1
-                Height: =32
-                Icon: ="AppsList"
-                IconColor: =If(activeToggleID = 2, CustomToggle.SelectedColorIcon_Text,CustomToggle.basedColorIcon_Text)
-                LayoutMinHeight: =20
-                LayoutMinWidth: =20
-                Width: =20
-                X: =0
-                Y: =0
+                Icon: =Icon.OptionsList
+                LayoutMinHeight: =Parent.LayoutMinHeight
+                LayoutMinWidth: =0
+                PaddingBottom: =5
+                PaddingLeft: =5
+                PaddingRight: =5
+                PaddingTop: =5
                 ZIndex: =2
 
     Button2 As button:
